Add remove organization member feature
